tests/kubernetes/custom-5.7.3/compliant/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: compliant-pod-full-security
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        capabilities:
          drop:
            - ALL
