tests/kubernetes/custom-5.7.3/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.7.3-compliant
policies:
  - ../../../../policies/kubernetes/pod-security/custom-5.7.3.yaml
resources:
  - pod.yaml
results:
  - policy: custom-5.7.3
    rule: require-security-context
    resources:
      - compliant-pod-full-security
    kind: Pod
    result: pass
